force-app/main/default/objects/ShelfAudit__c/ShelfAudit__c.object-meta.xml
<CustomObject>
    <label>Shelf Audit</label>
    <nameField>
        <displayFormat>SA-{000000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shelf Audits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>