force-app/main/default/objects/ShelfAudit__c/fields/AIAnalysisSummary__c.field-meta.xml
<CustomField>
    <fullName>AIAnalysisSummary__c</fullName>
    <label>AI Analysis Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>