force-app/main/default/objects/ShelfAudit__c/fields/AuditDate__c.field-meta.xml
<CustomField>
    <fullName>AuditDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Audit Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>