force-app/main/default/objects/ShelfAudit__c/fields/CompetitorPresenceDetected__c.field-meta.xml
<CustomField>
    <fullName>CompetitorPresenceDetected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Presence Detected</label>
    <type>Checkbox</type>
</CustomField>