force-app/main/default/objects/ShelfAudit__c/fields/MissingSKUs__c.field-meta.xml
<CustomField>
    <fullName>MissingSKUs__c</fullName>
    <label>Missing SKUs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>