force-app/main/default/objects/ShelfAudit__c/fields/OverallComplianceScore__c.field-meta.xml
<CustomField>
    <fullName>OverallComplianceScore__c</fullName>
    <label>Overall Compliance Score (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>