force-app/main/default/objects/ShelfAudit__c/fields/ParentAudit__c.field-meta.xml
<CustomField>
    <fullName>ParentAudit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Audit</label>
    <referenceTo>ShelfAudit__c</referenceTo>
    <relationshipLabel>Rescans</relationshipLabel>
    <relationshipName>Rescans</relationshipName>
    <type>Lookup</type>
</CustomField>