force-app/main/default/objects/ShelfAudit__c/fields/ReplenishmentOrderCreated__c.field-meta.xml
<CustomField>
    <fullName>ReplenishmentOrderCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replenishment Order Created</label>
    <type>Checkbox</type>
</CustomField>