force-app/main/default/objects/ShelfAudit__c/fields/RetailStore__c.field-meta.xml
<CustomField>
    <fullName>RetailStore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Store</label>
    <referenceTo>RetailStore</referenceTo>
    <relationshipLabel>Shelf Audits</relationshipLabel>
    <relationshipName>ShelfAudits</relationshipName>
    <type>Lookup</type>
</CustomField>