force-app/main/default/objects/ShelfAudit__c/fields/ShelfImageURL__c.field-meta.xml
<CustomField>
    <fullName>ShelfImageURL__c</fullName>
    <label>Shelf Image URL</label>
    <type>Url</type>
</CustomField>