force-app/main/default/objects/ShelfAudit__c/fields/ShelfSharePercentage__c.field-meta.xml
<CustomField>
    <fullName>ShelfSharePercentage__c</fullName>
    <label>Brand Shelf Share (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>