force-app/main/default/objects/ShelfAudit__c/fields/TotalSKUsExpected__c.field-meta.xml
<CustomField>
    <fullName>TotalSKUsExpected__c</fullName>
    <label>Total SKUs Expected</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>