force-app/main/default/objects/ShelfAudit__c/fields/TotalSKUsFound__c.field-meta.xml
<CustomField>
    <fullName>TotalSKUsFound__c</fullName>
    <label>Total SKUs Found</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>