force-app/main/default/objects/ShelfAudit__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <label>Visit</label>
    <referenceTo>Visit</referenceTo>
    <relationshipLabel>Shelf Audits</relationshipLabel>
    <relationshipName>ShelfAudits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>