force-app/main/default/objects/ShelfAudit__c/fields/WhatsAppReportSent__c.field-meta.xml
<CustomField>
    <fullName>WhatsAppReportSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp Report Sent</label>
    <type>Checkbox</type>
</CustomField>